# mtg-deck-builder

./: .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py
docs/: feature_candidates.md  plan.md  progress.md  registries_reference.md  role_candidates.md  streamlit_ui.md
registries/: features.yml  roles.yml
src/mtg_deck_builder/: __init__.py  cli.py
src/mtg_deck_builder/cache/: __init__.py  scryfall_cache.py  scryfall_client.py
src/mtg_deck_builder/data/: __init__.py  card_index.py  normalise.py
src/mtg_deck_builder/engine/: __init__.py  deck_builder.py  deckbrief.py
src/mtg_deck_builder/features/: __init__.py  extract.py
src/mtg_deck_builder/roles/: __init__.py  role_engine.py
tests/: conftest.py  test_card_index.py  test_cli.py  test_deck_builder.py  test_deckbrief.py  test_features.py  test_normalise.py  test_roles.py  test_scryfall.py
