[project]
name = "mtg-deck-builder"
version = "0.1.0"
description = "MTG Commander Deck Builder - Deterministic, explainable deck generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
mtg-deck-builder = "mtg_deck_builder.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.8",
    "streamlit>=1.52.0",
    "streamlit-searchbox>=0.1.24",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
